--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="container">
             <a href="#" class="logo">
-                <img src="/Assets/LOGO.jpg" alt="Logo YMARSAS">
+                <img src="/LOGO.jpg" alt="Logo YMARSAS">
             </a>
             <nav class="main-nav">
                 <ul>
@@ -40,7 +40,7 @@
                     <a href="#contacto" class="btn">Solicita una Asesoría Gratuita</a>
                 </div>
                 <div class="hero-image">
-                    <img src="/Assets/CONTADORES.jpg" alt="Contador trabajando con datos financieros">
+                    <img src="/CONTADORES.jpg" alt="Contador trabajando con datos financieros">
                 </div>
             </div>
         </section>
@@ -52,17 +52,17 @@
                     <div class="card">
                         <h3>Asesoría Contable Integral</h3>
                         <p>Gestión completa y actualizada de la contabilidad de tu empresa, asegurando precisión y cumplimiento normativo.</p>
-                        <img src="/Assets/ASESORIA.jpg" alt="Icono de contabilidad">
+                        <img src="/ASESORIA.jpg" alt="Icono de contabilidad">
                     </div>
                     <div class="card">
                         <h3>Optimización Tributaria</h3>
                         <p>Planeación estratégica y cumplimiento riguroso de todas tus obligaciones fiscales, minimizando riesgos y maximizando beneficios.</p>
-                        <img src="/Assets/TRIBUTARIA.jpg" alt="Icono de impuestos">
+                        <img src="/TRIBUTARIA.jpg" alt="Icono de impuestos">
                     </div>
                     <div class="card">
                         <h3>Auditoría y Revisoría Fiscal</h3>
                         <p>Evaluación imparcial y detallada de tus estados financieros para garantizar transparencia y confianza en tu gestión.</p>
-                        <img src="/Assets/FISCAL.jpg" alt="Icono de auditoría">
+                        <img src="/FISCAL.jpg" alt="Icono de auditoría">
                     </div>
                 </div>
                 <div class="cta-banner">
@@ -80,7 +80,7 @@
                     <p>Nuestros valores: **Integridad, Precisión y Compromiso.**</p>
                 </div>
                 <div class="about-image">
-                    <img src="/Assets/ALIADO.jpg" alt="Equipo de contadores trabajando en Ymarsas">
+                    <img src="/ALIADO.jpg" alt="Equipo de contadores trabajando en Ymarsas">
                 </div>
             </div>
         </section>
