--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ymar SAS - Soluciones Contables para Pymes</title>
+    <title>Y MAR SAS - Soluciones Contables para Pymes</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -75,7 +75,7 @@
         <section id="nosotros" class="about-section">
             <div class="container">
                 <div class="about-content">
-                    <h2>Ymar SAS: Tu Aliado Estratégico</h2>
+                    <h2>Y MAR SAS: Tu Aliado Estratégico</h2>
                     <p>Somos un equipo de contadores públicos con más de 10 años de experiencia, dedicados a ofrecer soluciones contables y tributarias a la medida de las Pequeñas y Medianas Empresas (Pymes). Nuestra pasión es ver crecer tu negocio, brindándote la tranquilidad de una gestión financiera impecable.</p>
                     <p>Nuestros valores: **Integridad, Precisión y Compromiso.**</p>
                 </div>
@@ -118,7 +118,7 @@
                 <h2>Lo que dicen nuestros clientes</h2>
                 <div class="testimonial-carousel">
                     <div class="testimonial-card">
-                        <p>"Gracias a Ymar SAS, la contabilidad de mi empresa es mucho más sencilla y eficiente. ¡Recomendados 100%!"</p>
+                        <p>"Gracias a Y MAR SAS, la contabilidad de mi empresa es mucho más sencilla y eficiente. ¡Recomendados 100%!"</p>
                         <h4>Ana López, Gerente de TechSolutions Pyme</h4>
                     </div>
                     <div class="testimonial-card">
@@ -173,7 +173,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-info">
-                <p>&copy; 2024 Ymarsas. Todos los derechos reservados.</p>
+                <p>&copy; 2024 Y MAR SAS. Todos los derechos reservados.</p>
                 <div class="social-links footer-social">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
