--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <section id="beneficios" class="benefits-section">
             <div class="container">
-                <h2>¿Por qué elegir Ymarsas?</h2>
+                <h2>¿Por qué elegir Y MAR SAS?</h2>
                 <div class="benefit-grid">
                     <div class="benefit-item">
                         <i class="fas fa-chart-line"></i>
